Changes to be committed: 	new file:   .vscode/launch.json 	modified:   home-page.html 	modified:   styles-home.css
Changes not staged for commit:
	modified:   home-page.html
	modified:   styles-home.css

--- a/styles-home.css
+++ b/styles-home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
 *{
     font-weight: 600;
 }
@@ -107,4 +109,81 @@ main{
     height: 700px;
      margin-left: 10px;
      
+}
+
+/* Estilos del footer */
+footer {
+    background-color: #0071BC;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    position: relative;
+    min-height: 100px;
+    padding: 20px 50px;
+}
+
+/* Estilos de los enlaces de redes sociales */
+.social-links {
+    margin-top: 10px;
+}
+
+.social-links a {
+    text-decoration: none;
+    color: white;
+    margin: 0 10px;
+}
+
+/* Estilos de los iconos de redes sociales */
+.social-links i {
+    font-size: 24px;
+}
+
+/* Estilos de los iconos de redes sociales */
+.social-links i {
+    font-size: 24px;
+}
+/* Estilos para las secciones verticales del footer */
+.footer-section {
+    text-align: left;
+}
+
+/* Estilos para el formulario de contacto */
+.contact-form {
+    background-color: #003B6F;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+/* Estilos para el mapa */
+.map {
+    height: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+footer .wave 
+{
+    position:absolute;
+    top: -100px;
+    left: 0;
+    width :100px;
+    height: 100px;
+    background :#f00 url(wave.png);
+    background-size: 1000px;
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+    .social-links {
+        margin-top: 20px;
+    }
+
+    .social-links a {
+        font-size: 18px;
+    }
+
+    .social-links i {
+        font-size: 30px;
+    }
 }
