--- a/styles-home.css
+++ b/styles-home.css
@@ -110,8 +110,7 @@ main{
      margin-left: 10px;
      
 }
-
-/* Estilos del footer */
+/* Styles del fotter comienzo*/
 footer {
     background-color: #0071BC;
     color: white;
@@ -122,7 +121,6 @@ footer {
     padding: 20px 50px;
 }
 
-/* Estilos de los enlaces de redes sociales */
 .social-links {
     margin-top: 10px;
 }
@@ -133,12 +131,10 @@ footer {
     margin: 0 10px;
 }
 
-/* Estilos de los iconos de redes sociales */
 .social-links i {
     font-size: 24px;
 }
 
-/* Estilos de los iconos de redes sociales */
 .social-links i {
     font-size: 24px;
 }
@@ -157,7 +153,7 @@ footer {
 /* Estilos para el mapa */
 .map {
     height: 300px;
-    border: 1px solid #ccc;
+    border: 3px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
 }
@@ -172,8 +168,8 @@ footer .wave
     background :#f00 url(wave.png);
     background-size: 1000px;
 }
+/* Styles del footer final*/
 
-/* Estilos responsivos */
 @media (max-width: 768px) {
     .social-links {
         margin-top: 20px;
