--- a/styles-home.css
+++ b/styles-home.css
@@ -125,3 +125,40 @@ main {
 .dark-blue {
   background-color: #1e3b65;
 }
+
+/* Styles de about INICIO */
+.about {
+  position: relative;
+  background-size: cover;
+}
+
+.about::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(./Assets/img/abstract-envelope-background.svg);
+  border-radius: 10%;
+  filter: opacity(0.15) blur(5px);
+  z-index: -1;
+}
+
+.image {
+  width: 100%;
+  aspect-ratio: 1;
+  border-radius: 5%;
+}
+
+.card {
+  background-color: #8cceef;
+  border-radius: 15px;
+}
+
+.card > img {
+  border-radius: 10px;
+  margin-top: 5px;
+}
+
+.card:hover {
+  background-color: #8cceef;
+}
