--- a/styles-home.css
+++ b/styles-home.css
@@ -129,19 +129,18 @@ main {
 }
 
 /* Styles de about INICIO */
-.about {
+/* .about {
   position: relative;
   background-size: cover;
-}
+} */
 
 .about::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url(./Assets/img/abstract-envelope-background.svg);
+  background: url(/Assets/img/elipces\ background.png);
   border-radius: 10%;
-  filter: opacity(0.15) blur(5px);
   z-index: -1;
 }
 
@@ -154,6 +153,7 @@ main {
 .card {
   background-color: #8cceef;
   border-radius: 15px;
+  z-index: -1;
 }
 
 .card > img {
@@ -163,6 +163,7 @@ main {
 
 .card:hover {
   background-color: #8cceef;
+}
 }
 /* Styles del fotter comienzo*/
 footer {
